site/content/less/header.less
@menu-border: 2px;
@menu-padding-h: @spacing-md;
@menu-padding-v: @spacing-md;
@menu-wide-width: (162 / 146) * (@line-height-px * 3 + @menu-padding-v * 6);

#header {
    background: @color-main-dark;
}

#loading-gear {
    display: none; // this is shown by JS
    z-index: 3 !important;
}

#logo {
    position: relative;
    display: inline-block;
    vertical-align: middle;
    height: (@line-height-px + @menu-padding-v * 2);
    margin: 0;
    padding: 0;

    & > .logo-layer {
        height: @line-height-px;
        margin: @menu-padding-v @menu-padding-h;
        padding: 0;

        &.logo-layer-fg,
        &.logo-layer-icon {
            position: absolute;
            bottom: 0;
            left: 0;
            z-index: 5;
        }

        &.logo-layer-icon {
            z-index: 2;
        }
    }

    & > .nav-icon {
        display: none; // this is shown by JS
        position: absolute;
        top: 28%;
        left: 0%;
        z-index: 1;
        height: @line-height-px;
        margin: @menu-padding-v @menu-padding-h;
        padding: 0;

        &.active {
            top: 15%;
            left: 15%;
            z-index: 7;
        }
    }

    #logo-margin-cover {
        position: absolute;
        top: @line-height-px + @menu-padding-v;
        right: 0;
        bottom: 0;
        left: 0;
        z-index: 4;
        background: @color-main-dark;
    }
}

#lang-select {
    float: right;
}

#lang-select,
#nav {
    display: inline-block;
    vertical-align: middle;
    margin: 0;
    padding: 0;

    & > li {
        display: inline-block;
        margin: 0;
        padding: 0;
        list-style-type: none;

        &.active {
            border-bottom: @menu-border solid @white;

            & > a,
            & > span {
                padding-bottom: (@menu-padding-v - @menu-border);
                .text-color-inverted-main();
            }
        }

        & > a,
        & > span {
            display: block;
            height: @line-height-px;
            margin: 0;
            padding: @menu-padding-v @menu-padding-h;
            .text-color-inverted-secondary();
            font-weight: bold;
            text-decoration: none;
            text-transform: uppercase;
        }
    }
}

@media (min-width: @screen-sm-min) and (max-width: @screen-md-max) {
    #logo {
        height: (@line-height-px * 2 + @menu-padding-v * 4);

        & > .logo-layer {
            height: (@line-height-px * 2);
            margin: (@menu-padding-v * 2) (@menu-padding-h * 2);
        }

        & > .nav-icon {
            height: (@line-height-px * 2);
            margin: (@menu-padding-v * 2) (@menu-padding-h * 2);
        }

        #logo-margin-cover {
            top: (@line-height-px * 2) + @menu-padding-v * 2;
        }
    }

    #lang-select > li:nth-child(2n) {
        display: block;
    }

    #lang-select > li.active {
        border-bottom: 0 none;

        & > a,
        & > span {
            padding-bottom: @menu-padding-v;
        }
    }

    #nav {
        margin: (@line-height-px / 2 + @menu-padding-v) 0;
        margin-left: @menu-padding-h;
    }
}

@media (min-width: @screen-lg-min) {
    #logo {
        display: block;
        height: (@line-height-px * 3 + @menu-padding-v * 6);

        & > .logo-layer {
            height: (@line-height-px * 3);
            margin: (@menu-padding-v * 3) (@menu-padding-h * 3);
        }

        & > .nav-icon {
            height: (@line-height-px * 3);
            margin: (@menu-padding-v * 3) (@menu-padding-h * 3);
        }

        #logo-margin-cover {
            top: (@line-height-px * 3) + @menu-padding-v * 3;
        }
    }

    #header {
        position: fixed;
        top: 0;
        bottom: 0;
        left: 0;
        width: @menu-wide-width;
    }

    #lang-select {
        position: absolute;
        bottom: 0;
        left: 0;
        display: block;
        width: @menu-wide-width;
        text-align: center;
    }

    #nav {
        display: block;
        width: @menu-wide-width;

        & > li {
            display: block;
            width: @menu-wide-width;
        }
    }

    #lang-select,
    #nav {
        & > li.active {
            border-bottom: 0 none;

            & > a,
            & > span {
                padding-bottom: @menu-padding-v;
            }
        }
    }
}

